--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "vagrant",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "yargs": "^1.3.2"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.0",
