Added sentiment gauge chart.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "test": "mocha specs/"
+    "test": "mocha specs/",
+    "start": "node server.js"
   }
 }
