--- a/package.json
+++ b/package.json
@@ -1,36 +1,20 @@
 {
-  "name": "vagrant",
-  "version": "0.0.0",
+  "name": "twitter-sentiment",
+  "version": "0.0.1",
   "dependencies": {
+    "backbone": "^1.1.2",
+    "backbone.marionette": "^2.2.2",
+    "backbone.radio": "^0.8.2",
+    "express": "^4.10.1",
+    "jquery": "^2.1.1",
+    "q": "^1.0.1",
+    "socket.io": "^1.2.0",
+    "twit": "^1.1.18",
     "yargs": "^1.3.2"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-jst": "~0.5.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-compass": "~0.5.0",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-mocha": "~0.4.1",
-    "grunt-usemin": "~0.1.10",
-    "grunt-rev": "~0.1.0",
-    "grunt-open": "~0.2.0",
-    "load-grunt-tasks": "~0.1.0",
-    "connect-livereload": "~0.2.0",
-    "time-grunt": "~0.2.1",
-    "jshint-stylish": "~0.1.3",
+    "browserify": "^6.2.0",
     "chai": "~1.9.0"
-  },
-  "engines": {
-    "node": ">=0.8.0"
   },
   "scripts": {
     "test": "mocha specs/",
