--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
   },
   "devDependencies": {
     "browserify": "^6.2.0",
-    "chai": "~1.9.0"
+    "chai": "~1.9.0",
+    "gulp": "^3.8.10",
+    "gulp-sass": "^1.1.0",
+    "gulp-sourcemaps": "^1.2.8",
+    "gulp-uglify": "^1.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0"
   },
   "scripts": {
     "test": "mocha",
