--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "^4.10.1",
     "jquery": "^2.1.1",
     "q": "^1.0.1",
-    "socket.io": "^1.2.0",
+    "socket.io": "0.9.16",
     "twit": "^1.1.18",
     "yargs": "^1.3.2"
   },
@@ -25,7 +25,7 @@
     "vinyl-source-stream": "^1.0.0"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha && nightwatch",
     "start": "node server.js"
   }
 }
