--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "devDependencies": {
     "browserify": "^6.2.0",
-    "chai": "~1.9.0",
     "gulp": "^3.8.10",
     "gulp-sass": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
+    "must": "^0.12.0",
     "nightwatch": "^0.5.33",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0"
